Bug 156741 - A11Y sidebar: drawing shape is not highlighted by clicking "Avoid floating text" warning
Summary: A11Y sidebar: drawing shape is not highlighted by clicking "Avoid floating te...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-11 12:16 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-31 17:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (13.14 KB, application/vnd.oasis.opendocument.text)
2023-08-11 12:16 UTC, Gabor Kelemen (Collabora)
Details
The shape with textbox is highlighted correctly - this can't be done to the other blue shape (78.47 KB, image/png)
2023-08-11 12:17 UTC, Gabor Kelemen (Collabora)
Details
screenshot (141.34 KB, image/png)
2023-08-15 16:05 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-11 12:16:39 UTC
Created attachment 188931 [details]
Example file from Writer

Attached document contains some drawing shapes / frames which are floating. The accessibility sidebar gives a warning "Avoid floating text" about these, but clicking the link of the drawing shape does not highlight the object.

1. Open attached document
2. Open the accessibility check sidebar
3. Notice there are 3 "Avoid floating text" warnings. Start clicking on them, then into the text.
-> Two objects, the frame and the shape with textbox get highlighted correctly. The drawing shape which contains text, does not.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0d571ff8079f858a5650bf6cbb38296d22cc58e1
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-08-11 12:17:42 UTC
Created attachment 188932 [details]
The shape with textbox is highlighted correctly - this can't be done to the other blue shape
Comment 2 BogdanB 2023-08-12 07:08:08 UTC
Confirm with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e2db54b9bf48b79802154d5fc9460fc432ea69a0
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-08-15 13:01:51 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/54c158ff35ab5a0b5fa538562755638e052d51f2

tdf#156741 - A11Y - fix drawing shape is not highlighted by clicking

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2023-08-15 16:04:41 UTC
I am testing if this bug is fixed, but now I get in Accesibility the message:
- "Anchor Frames/Text boxes "As Character"" instead of "Avoid floating text".

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6c06c8a2be3d8cbbcb8ab1aaaeb04db95114dfcb
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Al 3 elements can be selected, BUT the message is different, and it is not part of this commit.
Comment 5 BogdanB 2023-08-15 16:05:25 UTC
Created attachment 188980 [details]
screenshot
Comment 6 Commit Notification 2023-08-17 09:44:27 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/12fa73e75f183b44fb79128d420f4b0f9fb8b594

tdf#156741 - A11Y - fix drawing shape is not highlighted by clicking

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 futurefuture 2023-08-31 17:14:48 UTC Comment hidden (spam)