tdf#156741 - A11Y - fix drawing shape is not highlighted by clicking

"Avoid floating text" warning.

If GotoFly not select the textframe object try GotoDrawingObject.

Change-Id: Ica7829dd0cc21f3f1fb344dfb21afdfb43783cef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155676
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit 54c158ff35ab5a0b5fa538562755638e052d51f2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155699
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>